Closed
Bug 31091
Opened 25 years ago
Closed 25 years ago
need to add a lock to nsFileChannel::Cancel
Categories
(Core :: Networking, defect, P3)
Tracking
()
VERIFIED
FIXED
M15
People
(Reporter: warrensomebody, Assigned: warrensomebody)
Details
We need to add a lock to nsFileChannel::Cancel, Suspend, Resume. Maybe to
resource protocol too.
Assignee | ||
Comment 2•25 years ago
|
||
Added the same assertions to nsFileChannel that were added to the nsResChannel a
while back to prove that only good things happen.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•