Added assertions to prove that cancel was being used in a thread-safe way. Bug 31091.